Assignment-8 Not completly Done Yet

--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
     <div class="row jumbotron question" id="q2a">
       <div class="col-sm-6">
         <p>What do you <strong>like</strong> about HTML?</p>
-        <div class="checkbox">
+        <div class="loveOfHTML">
           <label >
-          <input name="likesHTML" type="checkbox"> Learning the basics is trivial
+          <input name="likesHTML" type="checkbox" > Learning the basics is trivial
         </label>
         </div>
-        <div class="checkbox">
-          <label>
-          <input name="likesHTML" type="checkbox"> No hassle: write code in a text editor and open in Browser
+        <div class="loveOfHTML">
+          <label >
+          <input name="likesHTML" type="checkbox" > No hassle: write code in a text editor and open in Browser
         </label>
         </div>
-        <div class="checkbox">
-          <label>
-          <input name="likesHTML" type="checkbox"> Tags are easy to remember
+        <div class="loveOfHTML">
+          <label >
+          <input name="likesHTML" type="checkbox" > Tags are easy to remember
         </label>
         </div>
-        <div class="checkbox">
+        <div class="loveOfHTML">
           <label>
           <input name="likesHTML" type="checkbox"> HTML5 features like canvas are powerful
         </label>
@@ -68,22 +68,22 @@
       </div>
       <div class="col-sm-6">
         <p>What do you <strong>dislike</strong> about HTML?</p>
-        <div class="checkbox">
+        <div class="hateOfHTML">
           <label>
           <input name="likesHTML" type="checkbox"> Difficult to learn
         </label>
         </div>
-        <div class="checkbox">
+        <div class="hateOfHTML">
           <label>
           <input name="likesHTML" type="checkbox"> Having to close tags is annoying!
         </label>
         </div>
-        <div class="checkbox">
+        <div class="hateOfHTML">
           <label>
           <input name="likesHTML" type="checkbox"> Too many tags and attributes to remember
         </label>
         </div>
-        <div class="checkbox">
+        <div class="hateOfHTML">
           <label>
           <input name="likesHTML" type="checkbox"> Code looks pretty messy
         </label>
